[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/ui_panel_2.png" type="Texture" id=1]
[ext_resource path="res://ui_themes/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/PausePopupMenu.gd" type="Script" id=3]
[ext_resource path="res://scripts/options_menu/OptionsMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/options_menu/AudioOptionsTab.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/options_menu/BackToPauseScreen.gd" type="Script" id=6]
[ext_resource path="res://scenes/options_menu/VideoOptionsTab.tscn" type="PackedScene" id=7]

[node name="PausePopupMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MainPauseMenu" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -144.0
margin_right = 151.0
margin_bottom = 144.0
texture = ExtResource( 1 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MainPauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -8.0
custom_constants/separation = 10

[node name="PausedLabel" type="Label" parent="MainPauseMenu/VBoxContainer"]
margin_right = 288.0
margin_bottom = 28.0
text = "paused"
align = 1
valign = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="MainPauseMenu/VBoxContainer"]
margin_top = 38.0
margin_right = 288.0
margin_bottom = 42.0

[node name="ResumeButton" type="Button" parent="MainPauseMenu/VBoxContainer"]
margin_top = 52.0
margin_right = 288.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="MainPauseMenu/VBoxContainer/ResumeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "RESUME"
align = 1
valign = 1
uppercase = true

[node name="OptionsButton" type="Button" parent="MainPauseMenu/VBoxContainer"]
margin_top = 110.0
margin_right = 288.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="MainPauseMenu/VBoxContainer/OptionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "OPTIONS"
align = 1
valign = 1
uppercase = true

[node name="TitleButton" type="Button" parent="MainPauseMenu/VBoxContainer"]
margin_top = 168.0
margin_right = 288.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="MainPauseMenu/VBoxContainer/TitleButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "EXIT TO TITLE"
align = 1
valign = 1
uppercase = true

[node name="QuitButton" type="Button" parent="MainPauseMenu/VBoxContainer"]
margin_top = 226.0
margin_right = 288.0
margin_bottom = 274.0

[node name="Label" type="Label" parent="MainPauseMenu/VBoxContainer/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "QUIT GAME"
align = 1
valign = 1
uppercase = true

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 50.0
margin_right = -64.0
margin_bottom = -40.0

[node name="OptionsMargin" type="MarginContainer" parent="OptionsMenu/MarginContainer"]
margin_right = 1152.0
margin_bottom = 630.0
custom_constants/margin_right = 90
custom_constants/margin_top = 85
custom_constants/margin_left = 90

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/MarginContainer/OptionsMargin"]
margin_left = 90.0
margin_top = 85.0
margin_right = 1062.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -10

[node name="OptionCategories" type="VBoxContainer" parent="OptionsMenu/MarginContainer/OptionsMargin/HBoxContainer"]
margin_right = 100.0
margin_bottom = 425.0
rect_min_size = Vector2( 100, 0 )

[node name="AudioOptionsTab" parent="OptionsMenu/MarginContainer/OptionsMargin/HBoxContainer/OptionCategories" instance=ExtResource( 5 )]
margin_right = 100.0
margin_bottom = 48.0
option_page = 0

[node name="VideoOptionsTab" parent="OptionsMenu/MarginContainer/OptionsMargin/HBoxContainer/OptionCategories" instance=ExtResource( 7 )]
margin_top = 52.0
margin_right = 100.0
margin_bottom = 100.0
option_page = 1

[node name="OptionsContainer" type="MarginContainer" parent="OptionsMenu/MarginContainer/OptionsMargin/HBoxContainer"]
margin_left = 90.0
margin_right = 716.0
margin_bottom = 425.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = -24
custom_constants/margin_left = 10

[node name="NinePatchRect" type="NinePatchRect" parent="OptionsMenu/MarginContainer/OptionsMargin/HBoxContainer/OptionsContainer"]
margin_left = 10.0
margin_top = -24.0
margin_right = 616.0
margin_bottom = 425.0
texture = ExtResource( 1 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="BackToPauseScreen" type="Button" parent="OptionsMenu/MarginContainer"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="OptionsMenu/MarginContainer/BackToPauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "BACK"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainPauseMenu/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MainPauseMenu/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainPauseMenu/VBoxContainer/TitleButton" to="." method="_on_TitleButton_pressed"]
[connection signal="pressed" from="MainPauseMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/MarginContainer/BackToPauseScreen" to="OptionsMenu/MarginContainer/BackToPauseScreen" method="_on_BackToTitleScreen_mouse_entered"]
[connection signal="pressed" from="OptionsMenu/MarginContainer/BackToPauseScreen" to="OptionsMenu/MarginContainer/BackToPauseScreen" method="_on_BackToTitleScreen_pressed"]
